Fix presenter's view
xterm creates "measuring elements" which have a default width of 50000px. Without `overflow: hidden`, this makes the presenter's view scroll out of view every time
the right arrow key is pressed to advance to the next slide step.

--- a/presentation/frontend/src/index.css
+++ b/presentation/frontend/src/index.css
@@ -27,6 +27,7 @@ body {
   margin: 0;
   display: flex;
   place-items: center;
+  overflow: hidden; /* Ensure xterm measuring elements don't break presenter view */
   min-width: 320px;
   min-height: 100vh;
 }
